RESOLVED FIXED255693
REGRESSION [IFC][line-clamp] walmart.com: Product details text overlaps
https://bugs.webkit.org/show_bug.cgi?id=255693
Summary REGRESSION [IFC][line-clamp] walmart.com: Product details text overlaps
alan
Reported 2023-04-19 16:53:30 PDT
Attachments
Patch (5.62 KB, patch)
2023-04-19 16:59 PDT, alan
no flags
Patch (5.78 KB, patch)
2023-04-19 17:10 PDT, alan
no flags
Patch (5.78 KB, patch)
2023-04-20 09:29 PDT, alan
no flags
Patch (20.84 KB, patch)
2023-04-21 15:58 PDT, alan
no flags
Patch (20.86 KB, patch)
2023-04-21 16:04 PDT, alan
no flags
Patch (20.86 KB, patch)
2023-04-22 13:47 PDT, alan
ews-feeder: commit-queue-
[fast-cq]Patch (22.65 KB, patch)
2023-04-22 15:45 PDT, alan
no flags
alan
Comment 1 2023-04-19 16:53:50 PDT
alan
Comment 2 2023-04-19 16:59:06 PDT
alan
Comment 3 2023-04-19 17:10:45 PDT
alan
Comment 4 2023-04-20 09:29:39 PDT
alan
Comment 5 2023-04-21 15:58:19 PDT
alan
Comment 6 2023-04-21 16:04:59 PDT
Antti Koivisto
Comment 7 2023-04-22 12:17:36 PDT
Comment on attachment 466036 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=466036&action=review > Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayBox.h:220 > +inline Box::Box(size_t lineIndex, Type type, const Layout::Box& layoutBox, UBiDiLevel bidiLevel, const FloatRect& physicalRect, const FloatRect& inkOverflow, Expansion expansion, std::optional<Text> text, bool hasContent, bool isFullyTruncated, OptionSet<PositionWithinInlineLevelBox> positionWithinInlineLevelBox) that's a lot of constructor parameters!
Antti Koivisto
Comment 8 2023-04-22 12:18:41 PDT
Comment on attachment 466036 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=466036&action=review > Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.h:77 > + bool isLineFullyTruncatedInBlockDirection() const { return m_lineIsFullyTruncatedInBlockDirection; } some inconsistent naming between the accessor and the member.
alan
Comment 9 2023-04-22 13:47:14 PDT
alan
Comment 10 2023-04-22 15:45:12 PDT
Created attachment 466048 [details] [fast-cq]Patch
EWS
Comment 11 2023-04-22 18:52:46 PDT
Committed 263289@main (0eca92867e2b): <https://commits.webkit.org/263289@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466048 [details].
Note You need to log in before you can comment on or make changes to this bug.